# hfhe-challenge

./: ANALYSIS.md  BUILD.md  CMakeLists.txt  LPN_ANALYSIS.md  LPN_SAMPLE_ANALYSIS.md  README.md  README_RECOVERY.md  REPORT.md  SHA256SUMS  manifest.json  params.json  pvac_commit.txt  secret.ct  seed.ct
docs/: index.html
report/: index.html
source/: hfhe_bounty_artifact.cpp  hfhe_seed_artifact.cpp  pvac_artifact_serialize.hpp
source/common/: analysis_utils.hpp  bundle_deserializer.hpp  file_utils.hpp  logger.hpp
source/tools/: verify_lpn_sample_binding.cpp
tools/: attack_pubkey_analysis.cpp  attack_pubkey_analysis_v2.cpp  attack_syndrome_decoder.cpp  challenge_analyzer.cpp  challenge_analyzer_v2.cpp  cross_layer.cpp  distinguish.cpp  inspect_artifacts.cpp  lpn_demo.py  lpn_estimate.py  plaintext_recovery.cpp  plaintext_recovery_v2.cpp  probe.cpp  probe_seeds.cpp
